Update Reveal to work with jQuery 1.7+ / Delete jQuery 1.4.4 archive

--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
- * Markup for jQuery Reveal Plugin 1.0
+ * Markup for jQuery Reveal Plugin 1.1
  * www.ZURB.com/playground
  * Copyright 2010, ZURB
  * Free to use under the MIT license.
@@ -14,8 +14,7 @@
 	  	<link rel="stylesheet" href="reveal.css">	
 	  	
 		<!-- Attach necessary scripts -->
-		<!-- <script type="text/javascript" src="jquery-1.4.4.min.js"></script> -->
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script type="text/javascript" src="jquery.reveal.js"></script>
 		
 		<style type="text/css">
